--- a/HotslogsExportProcessor/App.config
+++ b/HotslogsExportProcessor/App.config
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="HotsDraftHelper.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="HotslogsExportProcessor.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
     </startup>
     <userSettings>
-        <HotsDraftHelper.Settings>
-            <setting name="MinSampleSize" serializeAs="String">
-                <value>1000</value>
-            </setting>
+        <HotslogsExportProcessor.Settings>
             <setting name="HotsLogsExportPath" serializeAs="String">
                 <value>%USERPROFILE%\Documents\HOTSLogsExport</value>
             </setting>
@@ -28,12 +25,9 @@
             <setting name="AdjustmentsNumberOfDays" serializeAs="String">
                 <value>-1</value>
             </setting>
-            <setting name="DraftDataPath" serializeAs="String">
+            <setting name="ExtractDestinationPath" serializeAs="String">
                 <value>%USERPROFILE%\Documents\HotsDraftData.json</value>
             </setting>
-            <setting name="UseRawHotslogsExport" serializeAs="String">
-                <value>False</value>
-            </setting>
-        </HotsDraftHelper.Settings>
+        </HotslogsExportProcessor.Settings>
     </userSettings>
 </configuration>
