--- a/HotslogsExportProcessor/Settings.settings
+++ b/HotslogsExportProcessor/Settings.settings
@@ -1,10 +1,7 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HotsDraftHelper" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HotslogsExportProcessor" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="MinSampleSize" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">1000</Value>
-    </Setting>
     <Setting Name="HotsLogsExportPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">%USERPROFILE%\Documents\HOTSLogsExport</Value>
     </Setting>
@@ -20,11 +17,8 @@
     <Setting Name="AdjustmentsNumberOfDays" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">-1</Value>
     </Setting>
-    <Setting Name="DraftDataPath" Type="System.String" Scope="User">
+    <Setting Name="ExtractDestinationPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">%USERPROFILE%\Documents\HotsDraftData.json</Value>
-    </Setting>
-    <Setting Name="UseRawHotslogsExport" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
