--- a/HotsDraftHelper/HotsDraftHelper.csproj
+++ b/HotsDraftHelper/HotsDraftHelper.csproj
@@ -74,6 +74,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="SubGroupToColorConverter.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
